teste de implemetação do observables

--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -1,6 +1,22 @@
 <div class="container">
   <div class="offer" *ngIf="offer !== undefined">
 
+    <!-- <div class="row">
+      <div class="col">
+        <a [routerLink]="['/oferta', 1]">Oferta 1</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <a [routerLink]="['/oferta', 3]">Oferta 3</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <a [routerLink]="['/oferta', 6]">Oferta 6</a>
+      </div>
+    </div> -->
+
     <div class="row">
       <div class="col">
         <h4>{{offer.descricao_oferta}}</h4>
